# cpp_template

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt
